@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
+* [hornbunny] Fix extraction (#10981)
+
+
 version 2016.10.26
 
 Extractors
